Support OffHeapCache25